Trying to fix background to fix properly on smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -65,11 +65,9 @@ body {
 }
 
 @media (max-width: 768px) {
-  body {
     body {
       background-size: 400%; 
       background-repeat: no-repeat;
       background-position: center; 
     }
-  }
 }
